[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-budget"
version = "0.1.0"
description = "Zero-dependency token/cost budget enforcement for LLM agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Darshankumar Joshi", email = "darshjme@gmail.com" }]
keywords = ["llm", "agents", "budget", "cost-control", "zero-dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/darshjme/agent-budget"
Repository = "https://github.com/darshjme/agent-budget"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_budget*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
